# triggerlane

./: .env.example  .gitignore  .gitmodules  AGENTS.md  BACKLOG.md  CHANGELOG.md  Cargo.toml  PROJECT.md  README.md  deny.toml  docker-compose.yml  justfile
.github/workflows/: rust.yml
crates/triggerlane-cli/: Cargo.toml
crates/triggerlane-cli/src/: config.rs  main.rs
crates/triggerlane-core/: Cargo.toml
crates/triggerlane-core/src/: event.rs  lib.rs  trigger.rs
crates/triggerlane-http/: Cargo.toml
crates/triggerlane-http/src/: lib.rs
crates/triggerlane-runtime/: Cargo.toml
crates/triggerlane-runtime/src/: lib.rs
crates/triggerlane-storage/: Cargo.toml
crates/triggerlane-storage/src/: lib.rs
docs/: architecture.md  development-flow.md
docs/vision/: typed-event-orchestration-runtime.md
examples/: Cargo.toml  triggers.json
examples/invoker/: Cargo.toml
examples/invoker/src/: lib.rs
examples/src/: main.rs
openspec/: config.yaml
openspec/specs/broker-selection/: spec.md
openspec/specs/event-ingest/: spec.md
openspec/specs/event-model/: spec.md
openspec/specs/event-sources/: spec.md
openspec/specs/event-store-durability/: spec.md
openspec/specs/observability/: spec.md
openspec/specs/operator-interface/: spec.md
openspec/specs/project-shape/: spec.md
openspec/specs/trigger-model/: spec.md
openspec/specs/trigger-runtime/: spec.md
