[package]
name = "triggerlane-examples"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytes.workspace = true
tokio.workspace = true
triggerlane-core.workspace = true
triggerlane-runtime.workspace = true
triggerlane-storage.workspace = true
worklane-core.workspace = true
worklane-memory.workspace = true
