[package]
name = "triggerlane-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "triggerlane"
path = "src/main.rs"

[dependencies]
axum.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "signal"] }
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
triggerlane-core.workspace = true
triggerlane-http.workspace = true
triggerlane-runtime.workspace = true
triggerlane-storage.workspace = true
worklane-core.workspace = true
worklane-postgres.workspace = true
worklane-redis.workspace = true
worklane-sqlite.workspace = true

[dev-dependencies]
worklane-memory.workspace = true
