[package]
name = "triggerlane-http"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
chrono.workspace = true
hex.workspace = true
hmac.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
triggerlane-core.workspace = true
triggerlane-runtime.workspace = true
worklane-core.workspace = true

[dev-dependencies]
tokio.workspace = true
tower.workspace = true
triggerlane-storage.workspace = true
worklane-memory.workspace = true
