[package]
name = "triggerlane-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
metrics.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
triggerlane-core.workspace = true
triggerlane-storage.workspace = true
worklane-core.workspace = true

[dev-dependencies]
async-trait.workspace = true
bytes.workspace = true
tokio.workspace = true
worklane-memory.workspace = true
