[package]
name = "triggerlane-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
fs2.workspace = true
serde.workspace = true
serde_json.workspace = true
triggerlane-core.workspace = true

[dev-dependencies]
bytes.workspace = true
